--- a/about.html
+++ b/about.html
@@ -16,16 +16,16 @@
     <nav class="navbar">
         <div class="navbar__container">
             <div class="navbar__menu">
-                <a href="/" class="navbar__menu-item navbar__menu-item--active">
+                <a href="/digital.html" class="navbar__menu-item">
                     Digital
                 </a>
-                <a href="/" class="navbar__menu-item">
+                <a href="/alternative.html" class="navbar__menu-item">
                     Alternatives
                 </a>
-                <a href="/" class="navbar__menu-item">
+                <a href="/about.html" class="navbar__menu-item navbar__menu-item--active">
                     About
                 </a>
-                <a href="/" class="navbar__menu-item">
+                <a href="/weekendNotes.html" class="navbar__menu-item">
                     Data Room
                 </a>
             </div>
@@ -46,28 +46,28 @@
             </div>
         </div>
         <div class="navbar-mobile__menu-items">
-            <a href="/" class="navbar__menu-item navbar__menu-item--active">
+            <a href="/digital.html" class="navbar__menu-item navbar__menu-item--active">
                 Digital
             </a>
-            <a href="/" class="navbar__menu-item">
+            <a href="/alternative.html" class="navbar__menu-item">
                 Alternatives
             </a>
-            <a href="/" class="navbar__menu-item">
+            <a href="/about.html" class="navbar__menu-item">
                 About
             </a>
-            <a href="/" class="navbar__menu-item">
+            <a href="/weekendNotes.html" class="navbar__menu-item">
                 Data Room
             </a>
         </div>
     </nav>
     <header class="about-banner">
-        <div class="about-banner__title-container">
+        <div class="about-banner__title-container fade-in">
             <h1 class="about-banner__title team-selector--current" style="text-align: center; height: 1.7em;">
                 Investment Team
             </h1>
             <div class="about-banner__title-el"></div>
         </div>
-        <div class="about-banner__selectors-container">
+        <div class="about-banner__selectors-container fade-in">
             <div class="about-banner__selector uninvestement-team team-selector--active team-selector--investment" style="margin-bottom: 10px;">
                 <span>
                     INVESTMENT TEAM
@@ -88,7 +88,7 @@
             </div>
         </div>
 
-        <div class="about-carousel about-carousel--investment about-carousel--active">
+        <div class="about-carousel about-carousel--investment about-carousel--active fade-in">
             <div class="about-banner__carousel about-banner__carousel--investment">
                 <div class="about-banner__carousel-item">
                     <img src="./assets/images/about/investment-team/Marcel2.png" alt="Investment Team member"
@@ -174,7 +174,7 @@
                 </div>
             </div>
         </div>
-        <div class="about-banner__carousel-details">
+        <div class="about-banner__carousel-details fade-in">
             <div class="about-banner__carousel-details-content">
                 <div class="about-banner__carousel-title">
                     ERIC PETERS
@@ -295,12 +295,12 @@
         </div>
         <div class="footer__legal-links">
             <div class="footer__legal-item">
-                <a href="/" class="footer__legal-link">
+                <a href="/privacypolicy.html" class="footer__legal-link">
                     Privacy
                 </a>
             </div>
             <div class="footer__legal-item">
-                <a href="/" class="footer__legal-link">
+                <a href="/termsconditions.html" class="footer__legal-link">
                     Terms of use
                 </a>
             </div>
