--- a/digital.html
+++ b/digital.html
@@ -28,19 +28,17 @@
                     Data Room
                 </a>
             </div>
-            <div class="navbar__logo backInRight">
-                <a href="index.html">
-                <img src="./assets/images/oneriver-digital-logo.png" alt="OneRiver Digital Logo"
+            <a href="index.html" class="navbar__logo backInRight">
+                <img src="./assets/images/oneriver-digital-logo.svg" alt="OneRiver Digital Logo"
                     class="u-image-contain">
-                </a>
-            </div>
+            </a>
         </div>
     </nav>
     <nav class="navbar-mobile">
         <div class="navbar-mobile__menu">
             <div class="navbar-mobile__logo">
                 <a href="index.html">
-                <img src="./assets/images/oneriver-logo-light.png" alt="OneRiver Digital Logo"
+                <img src="./assets/images/oneriver-logo-light.svg" alt="OneRiver Digital Logo"
                     class="u-image-contain">
                 </a>    
             </div>
@@ -98,7 +96,7 @@
                 </div>
             </div>
             <div class="digital-banner__image backInLeft" style="opacity: 1;">
-                <img src="./assets/images/digital@1x.png" alt="Digital" class="u-image-contain">
+                <img src="./assets/images/digital-banner.svg" alt="Digital" class="u-image-contain">
             </div>
         </div>
         <div class="digital-banner__secondary fade-in">
@@ -191,7 +189,7 @@
     <footer class="footer">
         <div class="footer__container">
             <div class="footer__logo">
-                <img src="./assets/images/footer-logo.png" alt="OneRiver Logo" class="u-image-contain">
+                <img src="./assets/images/oneriver-logo-light.svg" alt="OneRiver Logo" class="u-image-contain">
             </div>
             <div class="footer__contact">
                 <div class="footer__contact-row">
