--- a/weekendArticle2.html
+++ b/weekendArticle2.html
@@ -29,14 +29,14 @@
                 </a>
             </div>
             <div class="navbar__logo">
-                <img src="./assets/images/oneriver-logo-light.png" alt="OneRiver Digital Logo" class="u-image-contain">
+                <img src="./assets/images/oneriver-logo-light.svg" alt="OneRiver Digital Logo" class="u-image-contain">
             </div>
         </div>
     </nav>
     <nav class="navbar-mobile">
         <div class="navbar-mobile__menu">
             <div class="navbar-mobile__logo">
-                <img src="./assets/images/oneriver-logo-light.png" alt="OneRiver Digital Logo" class="u-image-contain">
+                <img src="./assets/images/oneriver-logo-light.svg" alt="OneRiver Digital Logo" class="u-image-contain">
             </div>
             <div class="navbar-mobile__toggle">
                 <div class="navbar-mobile__toggle-icon"></div>
@@ -257,7 +257,7 @@
     <footer class="footer">
         <div class="footer__container">
             <div class="footer__logo">
-                <img src="./assets/images/footer-logo.png" alt="OneRiver Logo" class="u-image-contain">
+                <img src="./assets/images/oneriver-logo-light.svg" alt="OneRiver Logo" class="u-image-contain">
             </div>
             <div class="footer__contact">
                 <div class="footer__contact-row">
