--- a/weekendNotes.html
+++ b/weekendNotes.html
@@ -29,7 +29,7 @@
                 </a>
             </div>
             <div class="navbar__logo">
-                <img src="./assets/images/oneriver-logo-light.png" alt="OneRiver Digital Logo" class="u-image-contain">
+                <img src="./assets/images/oneriver-logo-light.svg" alt="OneRiver Digital Logo" class="u-image-contain">
             </div>
         </div>
     </nav>
@@ -37,7 +37,7 @@
         <div class="navbar-mobile__menu">
             <div class="navbar-mobile__logo">
               <a href="index.html">
-                <img src="./assets/images/oneriver-logo-light.png" alt="OneRiver Digital Logo" class="u-image-contain">
+                <img src="./assets/images/oneriver-logo-light.svg" alt="OneRiver Digital Logo" class="u-image-contain">
               </a>  
             </div>
             <div class="navbar-mobile__toggle">
@@ -66,7 +66,7 @@
       </div>
       <div class="weekend-content__row">
         <div class="weekend-content__left-panel ">
-          <img src="./assets/images/left-panel-white.png" class="backInLeft" style="width: 500px; margin-left: -90px;" alt="">
+          <img src="./assets/images/left-panel-white.svg" class="backInLeft" style="width: 500px; margin-left: -90px;" alt="">
           <div class="weekend-content__left-panel-links backInLeft">
               <div class="weekend-content__selector weekend-content__selector--title">
                   <span>
@@ -524,7 +524,7 @@
     <footer class="footer">
         <div class="footer__container">
             <div class="footer__logo">
-                <img src="./assets/images/footer-logo.png" alt="OneRiver Logo" class="u-image-contain">
+                <img src="./assets/images/oneriver-logo-light.svg" alt="OneRiver Logo" class="u-image-contain">
             </div>
             <div class="footer__contact">
                 <div class="footer__contact-row">
