--- a/alternative.html
+++ b/alternative.html
@@ -41,7 +41,7 @@
                 </div>
                 <div class="navbar__logo backInRight">
                     <img
-                        src="./assets/images/oneriver-logo.png"
+                        src="./assets/images/oneriver-logo.svg"
                         alt="OneRiver Digital Logo"
                         class="u-image-contain"
                     />
@@ -362,7 +362,7 @@
             <div class="footer__container">
                 <div class="footer__logo">
                     <img
-                        src="./assets/images/footer-logo.png"
+                        src="./assets/images/oneriver-logo-light.svg"
                         alt="OneRiver Logo"
                         class="u-image-contain"
                     />
