--- a/weekendArticle1.html
+++ b/weekendArticle1.html
@@ -29,14 +29,14 @@
                 </a>
             </div>
             <div class="navbar__logo">
-                <img src="./assets/images/oneriver-logo-light.png" alt="OneRiver Digital Logo" class="u-image-contain">
+                <img src="./assets/images/oneriver-logo-light.svg" alt="OneRiver Digital Logo" class="u-image-contain">
             </div>
         </div>
     </nav>
     <nav class="navbar-mobile">
         <div class="navbar-mobile__menu">
             <div class="navbar-mobile__logo">
-                <img src="./assets/images/oneriver-logo-light.png" alt="OneRiver Digital Logo" class="u-image-contain">
+                <img src="./assets/images/oneriver-logo-light.svg" alt="OneRiver Digital Logo" class="u-image-contain">
             </div>
             <div class="navbar-mobile__toggle">
                 <div class="navbar-mobile__toggle-icon"></div>
@@ -64,7 +64,7 @@
       </div>
       <div class="weekend-content__row">
         <div class="weekend-content__left-panel">
-          <img src="./assets/images/left-panel-white.png" style="width: 500px; margin-left: -90px;" alt="">
+          <img src="./assets/images/left-panel-white.svg" style="width: 500px; margin-left: -90px;" alt="">
           <div class="weekend-content__left-panel-links">
             <div class="weekend-content__selector weekend-content__selector--title">
                 <span>
@@ -273,7 +273,7 @@
     <footer class="footer">
         <div class="footer__container">
             <div class="footer__logo">
-                <img src="./assets/images/footer-logo.png" alt="OneRiver Logo" class="u-image-contain">
+                <img src="./assets/images/oneriver-logo-light.svg" alt="OneRiver Logo" class="u-image-contain">
             </div>
             <div class="footer__contact">
                 <div class="footer__contact-row">
