--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
                 <a href="/alternative.html" class="navbar__menu-item">
                     Alternatives
                 </a>
-                <a href="/about.html" class="navbar__menu-item navbar__menu-item--active navbar__menu-item--active-secondary">
+                <a href="/about.html" class="navbar__menu-item navbar__menu-item--active">
                     About
                 </a>
                 <a href="/weekendNotes.html" class="navbar__menu-item">
