--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 
         function startAllAnimationsInViewport() {
 
-            addClassBasedOnScroll(heroImageTrigger, heroImageMask, animOffset, 'animate__width-reverse--active');
+            addClassBasedOnScroll(heroImageMask, heroImageMask, animOffset, 'animate__width-reverse--active');
             addClassBasedOnScroll(heroTitle, heroTitle, animOffset, 'animate__fadeIn--active');
 
             addClassBasedOnScroll(homeContentTrigger, homeContent, animOffset, 'animate__fadeInUp--active');
