--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -101,21 +101,103 @@
                 <br>
             </span>
             <p class="privacy-section__h">INFORMATION WE MAY COLLECT FROM YOU</p>
-            <br>
             <span class="u-text-bold">
                 We may collect and process the following personal data about you:
             </span>
-            <ul>
-                <li>
-                    Information that you provide directly via our website, for example a request for information
-                </li>
-                <li>
-                    Information that you provide when you report any problem with our website
-                </li>
-                <li>
-                    If you contact us, we may keep a record of that correspondence, including any phone number or email address you use
-                </li>
-            </ul>
+            <br>
+            <br>
+            <p>
+                - Information that you provide directly via our website, for example a request for information
+                <br>
+                    - Information that you provide when you report any problem with our website
+                <br>
+                    - If you contact us, we may keep a record of that correspondence, including any phone number or email address you use
+                <br>
+                    - Information that you provide when completing surveys that we use for research purposes
+                <br>
+                    - Details of your usage of our website including, but not limited to, traffic data, location data, logs, error and crash reporting, and other communication data and the resources that you access
+                <br>
+                    - Information from any social network or other online accounts that you choose to share with us    
+            </p>
+            <br>
+            <p class="privacy-section__h">USE OF PERSONAL INFORMATION</p>
+            <span class="u-text-bold">
+                We process personal information for the purposes of:
+            </span>
+            <br>
+            <br>
+            <p>
+                - Providing you with our services
+                <br>
+                - Monitoring, analyzing and improving those services
+                <br>
+                - Prevention of money-laundering, fraud & illegal activities, and the prosecution of offenders
+                <br>
+                - Direct-marketing of our products and services, advising you of news and industry updates, events, educational opportunities, reports and other information and carrying out   
+                market research campaigns
+                <br>
+                - Providing you with information, products or services that you request from us or which we feel may interest you, where you have consented to be contacted for such 
+                purposes
+            </p>
+            <br>
+            <p class="privacy-section__h">MARKETING</p>
+            <p>
+                We will not share identifiable personal data with third parties for the purposes of direct marketing without your explicit consent. We may use and disclose information in aggregate (so that no individuals are identified) for marketing and strategic development purposes.
+            </p>
+            <br>
+            <p class="privacy-section__h">USE OF COOKIES</p>
+            <p>
+                In order to improve the website, we may use small files commonly known as “cookies”. A cookie is a small amount of data which often includes a unique identifier that is sent to your computer or mobile phone (referred to in this notice as a ‘device’) from the website and is stored on your device’s hard drive. Our use of cookies also allows certain users to be presented with a personalized version of the site.
+                <br>
+                <br>
+                We may collect information about your computer, including where available your IP address, operating system and browser type, for system information and to report aggregate information. This is statistical data about our users’ browsing actions and patterns and does not identify any individual.
+                <br>
+                <br>
+                For the same reason, we may obtain information about your general internet usage by using a cookie file which is stored on the hard drive of your computer. We use cookies to identify you when you visit this website, keep track of your browsing patterns. They help us to improve our website and deliver a better and more personalized service.
+                <br>
+                <br>
+                If you don’t want us to use cookies when you use the website, you can adjust your internet browser settings not to accept cookies. Your web browser’s help function should tell you how to do this.
+                <br>
+                <br>
+                Alternatively, you can find information about how to do this for all the commonly used internet browsers on the website: www.aboutcookies.org, which also explains how you can delete cookies which are already stored on your device. Please note however that turning off cookies will restrict your use of our website.
+                <br>
+                <br>
+                By continuing to use this website you are agreeing to the use of cookies as detailed above.
+
+            </p>
+            <br>
+            <p class="privacy-section__h">WHERE WE STORE YOUR PERSONAL DATA</p>
+            <p>
+                The data we collect from you may be transferred to, and stored at, a destination outside the European Economic Area (“EEA”). It may also be processed by staff operating outside the EEA who work for us or one of our suppliers. By submitting your personal data, you agree to this transfer, storing or processing. We will take all steps reasonably necessary to ensure that your data is treated securely and in accordance with this privacy notice.
+            </p>
+            <br>
+            <p class="privacy-section__h">DISCLOSURE OF YOUR INFORMATION</p>
+            <span class="u-text-bold">
+                We will only disclose data when obliged to disclose personal data by law, or the disclosure is ‘necessary’ for purposes of national security, taxation and criminal investigation, or we have your consent, and to the following:
+            </span>
+            <br>
+            <br>
+            <p>
+            - Other companies or entities within our affiliated group of companies
+            <br>
+            - Business partners
+            <br>
+            - Suppliers we engage to process data on our behalf
+            <br>
+            - Material service providers
+            <br>
+            - Successors in title to our business
+            </p>
+            <br>
+            <p class="privacy-section__h">ACCESS TO INFORMATION</p>
+            <p>
+                You have a right to access the personal data held about you or to obtain a copy of it. We may ask you to verify your identity and to provide us with more information about your request. To obtain a copy of the personal information we hold about you, please email compliance@oneriveram.com.
+            </p>
+            <br>
+            <p class="privacy-section__h">AMENDMENTS</p>
+            <p>
+                Please note that this privacy notice is subject to change from time to time.
+            </p>
         </div>
 </section>
 <!--END SECTION-->
