--- a/alternative.html
+++ b/alternative.html
@@ -53,7 +53,7 @@
                 <div class="navbar-mobile__logo">
                     <a href="/">
                     <img
-                        src="./assets/images/oneriver-logo-light.png"
+                        src="./assets/images/oneriver-logo-light.svg"
                         alt="OneRiver Digital Logo"
                         class="u-image-contain"
                     />
