--- a/digital.html
+++ b/digital.html
@@ -397,7 +397,7 @@
             const readContent = document.querySelector('.digital-read__container');
 
             function startAllAnimationsInViewport() {
-                addClassBasedOnScroll(heroImageTrigger, heroImage, animOffset, 'animate__width--active');
+                addClassBasedOnScroll(heroImage, heroImage, animOffset, 'animate__width--active');
 
                 addClassBasedOnScroll(readTitleTrigger, readTitle, animOffset, 'animate__fadeInUp--active');
                 addClassBasedOnScroll(readTitleTrigger, readContent, animOffset, 'animate__fadeIn--active');
