--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <nav class="navbar-mobile">
         <div class="navbar-mobile__menu">
             <div class="navbar-mobile__logo">
-                <img src="./assets/images/oneriver-logo-light.png" alt="OneRiver Digital Logo" class="u-image-contain">
+                <img src="./assets/images/oneriver-logo-light.svg" alt="OneRiver Digital Logo" class="u-image-contain">
             </div>
             <div class="navbar-mobile__toggle">
                 <div class="navbar-mobile__toggle-icon"></div>
